--- a/index-11.html
+++ b/index-11.html
@@ -764,7 +764,8 @@
                 <div class="f-bottom">
                     <div class="auto-container">
                         <div class="inner clearfix">
-                            <div class="copyright">&copy; 2023 Archway WordPress Theme</div>
+                              <p class="copyright">Copyright © 2024 ADCarpentry & Construction Ltd | All Rights Reserved | Website by <a
+         target="_blank" href="https://story-x.co.uk/">StoryX</a></p>
                         </div>
                     </div>
                 </div>
