--- a/index-7.html
+++ b/index-7.html
@@ -223,12 +223,13 @@
                                 <li>E: generalinquiries@archway.com</li>
                             </ul>
                             <div class="social-links">
+                                <div class="social-links">
                                 <ul class="clearfix">
-                                    <li><a href="#"><i class="icon"><img src="images/resource/linkedin.svg" alt="" title=""></i></a></li>
-                                    <li><a href="#"><i class="icon"><img src="images/resource/twitter.svg" alt="" title=""></i></a></li>
-                                    <li><a href="#"><i class="icon"><img src="images/resource/facebook.svg" alt="" title=""></i></a></li>
-                                    <li><a href="#"><i class="icon"><img src="images/resource/instagram.svg" alt="" title=""></i></a></li>
+                                    
+                                    <li><a href="https://www.facebook.com/ADCarpentryconstructionltd/"><i class="icon"><img src="images/resource/facebook.svg" alt="" title=""></i></a></li>
+                                    <li><a href="https://www.instagram.com/adcarpentry_and_construction/?hl=en"><i class="icon"><img src="images/resource/instagram.svg" alt="" title=""></i></a></li>
                                 </ul>
+                            </div>
                             </div>
                         </div>
                     </div>
